# FloorCast

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  requirements.txt
app/: globals.css  page.tsx
backend/: .gitignore  Makefile  README.md  pyproject.toml
backend/config/: floorcast.yaml  settings.py
backend/scripts/: apply_aurora_schema.py  seed_data.py
backend/src/floorcast/: __init__.py  lambda_handler.py
backend/src/floorcast/api/: schemas.py
backend/src/floorcast/api/routers/: heatmap.py  optimization.py  runs.py
backend/src/floorcast/db/aurora/: models.py
backend/src/floorcast/models/: __init__.py  optimization.py  rack.py
backend/src/floorcast/optimizer/: calendar.py  engine.py
backend/src/floorcast/services/: generator.py  heatmap_service.py  optimization_service.py  topology_service.py
backend/tests/: conftest.py  test_config.py  test_optimizer.py  test_runs_api.py  test_topology.py
components/: DataCentreFloor.tsx  FloorVisualization.tsx  RackRow.tsx  ServerRack.tsx
config/: floorcast.yaml  settings.py
frontend/: package-lock.json
frontend/app/: layout.tsx
frontend/components/: FloorVisualization.tsx  RackRow.tsx  ServerRack.tsx  SuiteFloor.tsx  blocks.tsx
frontend/lib/: mock-data.ts  scene-layout.ts  types.ts
lib/: mock-data.ts  types.ts
scripts/: analyze_soft_headroom.py  create_dynamo_tables.py  seed_data.py
src/floorcast/api/: main.py
src/floorcast/models/: optimization.py  topology.py
tests/: test_config.py  test_generator.py  test_optimizer.py
(+13 files in other folders)
